React todo app added to the portfolio

--- a/index.html
+++ b/index.html
@@ -176,10 +176,28 @@
           </a>
           <div class="tools">
             <button class="btn btn-danger">HTML</button>
-            <button class="btn btn-dark">CSS</button>
+            <button class="btn btn-info">CSS</button>
             <button class="btn btn-secondary">Javascript</button>
             <button class="btn btn-light">Responsive Web Design</button>
             <button class="btn btn-dark">CSS Flexbox</button>
+          </div>
+        </div>
+        <!-- item 9 -->
+        <div class="item">
+          <a href="https://hafizulhaque.github.io/react-todo-app/" target="_blank">
+            <div class="view">
+              <img src="./img/ss/todo.jpeg" alt="">
+            </div>
+            <h3>React JS Project: Task Tracker App</h3>
+            <p>This is a React Task Tracker Project. Did this porject to learn react concepts like hooks, states, state-lifting,
+              react-router etc. practically. This really cool looking react website works pretty well.</p>
+          </a>
+          <div class="tools">
+            <button class="btn btn-dark">HTML</button>
+            <button class="btn btn-success">CSS</button>
+            <button class="btn btn-primary">Bootstrap</button>
+            <button class="btn btn-danger">Responsive Web Design</button>
+            <button class="btn btn-info">React JS</button>
           </div>
         </div>
       </div>
