bug fixed - blockchain app included

--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
           </a>
           <div class="tools">
             <h4>Tools & Techniques:</h4>
-            <button class="btn btn-info">HTML</button>
-            <button class="btn btn-success">CSS</button>
-            <button class="btn btn-light">Vanilla Js</button>
-            <button class="btn btn-danger">HTML5 Canvas API</button>
+            <button class="btn btn-info m-1">HTML</button>
+            <button class="btn btn-success m-1">CSS</button>
+            <button class="btn btn-light m-1">Vanilla Js</button>
+            <button class="btn btn-danger m-1">HTML5 Canvas API</button>
           </div>
         </div>
         <!-- item 8 -->
@@ -175,11 +175,12 @@
             <p>This is a click-play web piano app. Implemented this web appliacation to gain some hand on experience of vanilla javascript. No framework was used. Design of this page was simply done using CSS. And for dynamic rendering and logic we used vanilla javascript.</p>
           </a>
           <div class="tools">
-            <button class="btn btn-danger">HTML</button>
-            <button class="btn btn-info">CSS</button>
-            <button class="btn btn-secondary">Javascript</button>
-            <button class="btn btn-light">Responsive Web Design</button>
-            <button class="btn btn-dark">CSS Flexbox</button>
+            <h4>Tools & Techniques:</h4>
+            <button class="btn btn-danger m-1">HTML</button>
+            <button class="btn btn-info m-1">CSS</button>
+            <button class="btn btn-secondary m-1">Javascript</button>
+            <button class="btn btn-light m-1">Responsive Web Design</button>
+            <button class="btn btn-dark m-1">CSS Flexbox</button>
           </div>
         </div>
         <!-- item 9 -->
@@ -193,11 +194,32 @@
               react-router etc. practically. This really cool looking react website works pretty well.</p>
           </a>
           <div class="tools">
-            <button class="btn btn-dark">HTML</button>
-            <button class="btn btn-success">CSS</button>
-            <button class="btn btn-primary">Bootstrap</button>
-            <button class="btn btn-danger">Responsive Web Design</button>
-            <button class="btn btn-info">React JS</button>
+            <h4>Tools & Techniques:</h4>
+            <button class="btn btn-dark m-1">HTML</button>
+            <button class="btn btn-success m-1">CSS</button>
+            <button class="btn btn-primary m-1">Bootstrap</button>
+            <button class="btn btn-danger m-1">Responsive Web Design</button>
+            <button class="btn btn-info m-1">React JS</button>
+            </div>
+            </div>
+            <!-- item 10 -->
+            <div class="item">
+              <a href="./resources/blockchain-maldect-app/index.html" target="_blank">
+                <div class="view">
+                  <img src="./img/ss/bb-mal-dect.jpeg" alt="">
+                </div>
+                <h3>Frontend: Blockchain-Based Malware Detection App</h3>
+                <p>This is the implemented frontend for Malware Detection application using Ethereum blockchin and Support Vector
+                  Machine (SVM) algo in the backend. Did this to prototype my final year thesis work.</p>
+              </a>
+              <div class="tools">
+                <h4>Tools & Techniques:</h4>
+                <button class="btn btn-primary m-1">HTML</button>
+                <button class="btn btn-secondary m-1">CSS</button>
+                <button class="btn btn-success m-1">javaScript</button>
+                <button class="btn btn-light m-1">Blockchain</button>
+                <button class="btn btn-info m-1">Machine Learning</button>
+                <button class="btn btn-danger m-1">SVM Algo</button>
           </div>
         </div>
       </div>
